# miitokn

./: .gitignore  README.md  THIRD-PARTY-LICENSES.md
.github/workflows/: release.yml
frontend/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
website/: index.html
website/css/: style.css
website/js/: main.js
