[package]
name = "miitokn"
version = "1.1.0"
edition = "2021"
description = "Extract Xiaomi / Mi Home device tokens from a local iPhone backup"
license = "GPL-3.0-or-later"
repository = "https://github.com/billo32/miitokn"
authors = ["billo32"]
homepage = "https://miitokn.com"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crabapple = "0.4"
rusqlite = { version = "0.40", features = ["bundled"] }
aes = "0.9"
hex = "0.4"
tempfile = "3"
dirs = "5"
plist = "1"

[[bin]]
name = "miitokn"
path = "src/main.rs"
